# quantum-image-ksasf

./: README.md  colorbar_demo.ipynb  frqi.ipynb  neqr.ipynb
2-by-2-greyscale/: frqi.ipynb  hello.py  pyproject.toml  sample_circuit.ipynb  trial.ipynb
FRQI-greyscale/: frqi.ipynb  sample_circuit.ipynb
FRQI-greyscale/quantum-compare-main/: app.py  compare.py  requirements.txt
FRQI-greyscale/quantum-compare-main/templates/: index.html
NEQR-greyscale/: balanced_weighted_mae.csv  neqr.ipynb  plot.py
frqi/: analysis.py  build_circuit.py  debug_results_mae.csv  demo.py  fidelity_vs_shots.csv  frqi_demo.ipynb  frqi_webapp.py  main.py  preprocess.py  webapp_test.py
frqi/analysis_entropy/: entropy_utils.py  plot_scatter.py  workflow.py
frqi/website/: analysis.py  api.py  app.py  build_circuit.py  debug_results.csv  frqi_compare_shots.py  frqi_demo.ipynb  frqi_utils.py  plot.py  preprocess.py  simulate.py
frqi/website/logic/: batch_processing.py
frqi/website/routes/: batch.py  debug.py  inspect.py  main.py
frqi/website/static/: style.css
poster_demo/: app.py
poster_demo/templates/: index.html
quantum-compare-main/: .gitignore
