[project]
name = "2-by-2-greyscale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "qiskit>=1.3.2",
    "qiskit-aer>=0.16.1",
    "qiskit-ibm-runtime>=0.36.1",
    "qiskit-terra>=0.46.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
